# Copyright 2024 Ivan Yurchenko
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "powerwal"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
regex = "1.10.2"
byteorder = "1.5.0"
crc32fast = "1.3.2"
thiserror = "1.0.56"

log = "0.4.20"

[dev-dependencies]
rstest = "0.18.2"
assert_matches = "1.5.0"
mockall = "0.12.1"
tempfile = "3.9.0"
